Add dynamic data fetching

--- a/DownPayment/DPA_app/templates/check_eligibility.html
+++ b/DownPayment/DPA_app/templates/check_eligibility.html
@@ -4,8 +4,18 @@
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
 <script src="{% static 'js/script.js' %}"></script>
 
+<!-- form -->
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    
+    <label for="county">County:</label>
+    <select id="county" name="county">
+        {% for county in counties %}
+            <option value="{{ county }}">{{ county }}</option>
+        {% endfor %}
+    </select>
+
     <button type="submit">Submit</button>
 </form>
+
