feat: add map to form logic files

--- a/DownPayment/DPA_app/templates/index.html
+++ b/DownPayment/DPA_app/templates/index.html
@@ -1,3 +1,7 @@
+{% load static %}
+<link href="{% static 'css/style.css' %}" rel="stylesheet">
+<script src="{% static 'js/script.js' %}"></script>
+
 <!DOCTYPE html>
 <html data-wf-domain="anons-groovy-site-a6512e.webflow.io" data-wf-page="654c77ac58ba8fef7c309ecd" data-wf-site="654c77ac58ba8fef7c309e94">
    <head>
