fix: edited home page to add Figma wireframe details

--- a/DownPayment/DPA_app/templates/index.html
+++ b/DownPayment/DPA_app/templates/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Business Frontpage - Start Bootstrap Template</title>
+    <title>Get Down Payment Assistance</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
@@ -21,52 +21,43 @@
   </head>
   <body>
     <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
       <div class="container px-5">
-        <a class="navbar-brand" href="#!">Start Bootstrap</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <img class="logo" src="/DownPayment/DPA_app/static/images/logo.png" />
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#!">Home</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-            <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="check_eligibility.html">Survey</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="progmap.html">Maps</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- Header-->
-    <header class="bg-dark py-5">
+    <header class="bg-secondary py-5">
       <div class="container px-5">
         <div class="row gx-5 justify-content-center">
           <div class="col-lg-6">
             <div class="text-center my-5">
-              <h1 class="display-5 fw-bolder text-white mb-2">
-                Present your business in a whole new way
-              </h1>
+              <h1 class="display-5 fw-bolder text-white mb-2">THE GET DOWN</h1>
               <p class="lead text-white-50 mb-4">
-                Quickly design and customize responsive mobile-first sites with
-                Bootstrap, the world’s most popular front-end open source
-                toolkit!
+                HOUSING DOWN PAYMENT ASSISTANCE
               </p>
               <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features"
+                <a
+                  class="btn btn-primary btn-lg px-4 me-sm-3"
+                  href="check_eligibility.html"
                   >Get Started</a
-                >
-                <a class="btn btn-outline-light btn-lg px-4" href="#!"
-                  >Learn More</a
                 >
               </div>
             </div>
@@ -84,14 +75,14 @@
             >
               <i class="bi bi-collection"></i>
             </div>
-            <h2 class="h4 fw-bolder">Featured title</h2>
             <p>
-              Paragraph of text beneath the heading to explain the heading.
-              We'll add onto it with another sentence and probably just keep
-              going until we run out of words.
+              Our mission is to leverage technology and innovation to empower
+              individuals and families in achieving the dream of homeownership.
+              Focused on addressing the barrier of down payment affordability.
+              See "About" to learn more.
             </p>
-            <a class="text-decoration-none" href="#!">
-              Call to action
+            <a class="text-decoration-none" href="about.html">
+              About Us
               <i class="bi bi-arrow-right"></i>
             </a>
           </div>
