--- a/The Get Down/style.css
+++ b/The Get Down/style.css
@@ -111,7 +111,7 @@ nav.sticky .menu-btn {
 .home {
   height: 100vh;
   width: 100%;
-  background: url("images/background1.jpg") no-repeat;
+  background: url("/The Get Down/Images/background1.jpg") no-repeat;
   background-size: cover;
   background-size: 100% 100%;
   background-position: center center;
