--- a/DownPayment/DPA_app/templates/check_eligibility.html
+++ b/DownPayment/DPA_app/templates/check_eligibility.html
@@ -57,10 +57,13 @@ button:hover {
     </style>
   </head>
   <body>
-    <!-- Move to up button -->
+    <!-- home -->
     <div class="scroll-button">
-      <a href="#home"><i class="fas fa-arrow-up"></i></a>
+        <a href="/">
+            <img style="width:50px;" src="{% static 'images/logo-png_1.png' %}" alt="Logo" />
+        </a>
     </div>
+    
     
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
 <script src="{% static 'js/script.js' %}"></script>
