--- a/DownPayment/DPA_app/templates/home.html
+++ b/DownPayment/DPA_app/templates/home.html
@@ -690,7 +690,9 @@ footer .text span a:hover {
     <!-- navgaition menu -->
     <nav>
       <div class="navbar">
+        <div class="logo"><a href="#"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 50px;"></a></div>
         <div class="logo"><a href="#">The Get Down.</a></div>
+        
         <ul class="menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">Mission</a></li>
@@ -784,523 +786,7 @@ footer .text span a:hover {
       
         
         <div class="skills-details" id="quizContainer">
-          <!-- Questionnaire Section -->
-          <!-- <div id="questionnaire">
-            <div class="question" id="question-1">
-              <p id="question-text-1">
-                Have you owned a home in the past 3 years?
-              </p>
-              <button class="next-button" onclick="answerQuestion('Yes')">
-                Yes
-              </button>
-              <button class="next-button" onclick="answerQuestion('No')">
-                No
-              </button>
-            </div>
-
-            <div class="question" id="question-2" style="display: none">
-              <p id="question-text-2">
-                Is your household income below the limit for your area based on
-                household size?
-              </p>
-              <button class="next-button" onclick="answerQuestion('Yes')">
-                Yes
-              </button>
-              <button class="next-button" onclick="answerQuestion('No')">
-                No
-              </button>
-            </div>
-
-            <div class="question" id="question-3" style="display: none">
-              <p id="question-text-3">
-                Do you meet credit requirements for a mortgage loan?
-              </p>
-              <button class="next-button" onclick="answerQuestion('Yes')">
-                Yes
-              </button>
-              <button class="next-button" onclick="answerQuestion('No')">
-                No
-              </button>
-            </div>
-
-            <div class="question" id="question-4" style="display: none">
-              <p id="question-text-4">Are you a first-time homebuyer?</p>
-              <button class="next-button" onclick="answerQuestion('Yes')">
-                Yes
-              </button>
-              <button class="next-button" onclick="answerQuestion('No')">
-                No
-              </button>
-            </div>
-
-            <div class="question" id="question-5" style="display: none">
-              <p id="question-text-5">
-                Do you or anyone in your family have a disability?
-              </p>
-              <button class="next-button" onclick="answerQuestion('Yes')">
-                Yes
-              </button>
-              <button class="next-button" onclick="answerQuestion('No')">
-                No
-              </button>
-            </div>
-
-            <div class="question" id="question-6" style="display: none">
-              <p id="question-text-6">
-                Are you employed as a public protector, educator, healthcare
-                worker, or active military?
-              </p>
-              <button class="next-button" onclick="answerQuestion('Yes')">
-                Yes
-              </button>
-              <button class="next-button" onclick="answerQuestion('No')">
-                No
-              </button>
-            </div>
-
-            <div
-              id="eligibility-message"
-              class="message"
-              style="display: none"
-            ></div> -->
-          <!-- </div> -->
-          <!-- Question 1 -->
-          <!-- <div class="box" id="question1">
-            <div class="question">
-              <label>Do you live in the State of Georgia?</label>
-              <div class="options">
-                <label for="q1_yes">Yes</label>
-                <input
-                  type="radio"
-                  id="q1_yes"
-                  name="question1"
-                  value="Yes"
-                  required
-                />
-
-                <label for="q1_no">No</label>
-                <input
-                  type="radio"
-                  id="q1_no"
-                  name="question1"
-                  value="No"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question1', 'question2')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-          <!-- Question 2 -->
-          <!-- <div class="box" id="question2" style="display: none">
-            <div class="question">
-              <label>What type of home are you hoping to purchase?</label>
-              <div class="options">
-                <label for="q2_single_family">Single family home</label>
-                <input
-                  type="radio"
-                  id="q2_single_family"
-                  name="question2"
-                  value="Single family home"
-                  required
-                />
-
-                <label for="q2_townhouse">Townhouse</label>
-                <input
-                  type="radio"
-                  id="q2_townhouse"
-                  name="question2"
-                  value="Townhouse"
-                  required
-                />
-
-                <label for="q2_condo_apartment">Condo/Apartment</label>
-                <input
-                  type="radio"
-                  id="q2_condo_apartment"
-                  name="question2"
-                  value="Condo/Apartment"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question2', 'question3')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-          <!-- Question 3 -->
-          <!-- <div class="box" id="question3" style="display: none">
-            <div class="question">
-              <label>What is the estimated purchase price of the home?</label>
-              <div class="options">
-                <label for="q3_less_than_200k">Less than $200,000</label>
-                <input
-                  type="radio"
-                  id="q3_less_than_200k"
-                  name="question3"
-                  value="Less than $200,000"
-                  required
-                />
-
-                <label for="q3_200k_to_250k">$200,000 - $250,000</label>
-                <input
-                  type="radio"
-                  id="q3_200k_to_250k"
-                  name="question3"
-                  value="$200,000 - $250,000"
-                  required
-                />
-
-                <label for="q3_250k_to_300k">$250,001 - $300,000</label>
-                <input
-                  type="radio"
-                  id="q3_250k_to_300k"
-                  name="question3"
-                  value="$250,001 - $300,000"
-                  required
-                />
-
-                <label for="q3_300k_to_350k">$300,001 - $350,000</label>
-                <input
-                  type="radio"
-                  id="q3_300k_to_350k"
-                  name="question3"
-                  value="$300,001 - $350,000"
-                  required
-                />
-
-                <label for="q3_350k_to_375k">$350,001 - $375,000</label>
-                <input
-                  type="radio"
-                  id="q3_350k_to_375k"
-                  name="question3"
-                  value="$350,001 - $375,000"
-                  required
-                />
-
-                <label for="q3_more_than_375k">More than $375,000</label>
-                <input
-                  type="radio"
-                  id="q3_more_than_375k"
-                  name="question3"
-                  value="More than $375,000"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question3', 'question4')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-
-          <!-- Question 4 -->
-          <!-- <div class="box" id="question4" style="display: none">
-            <div class="question">
-              <label>
-                Do you currently qualify for a mortgage loan through FHA, VA, or
-                a conventional lender?
-              </label>
-              <div class="options">
-                <label for="q4_yes">Yes, I qualify</label>
-                <input
-                  type="radio"
-                  id="q4_yes"
-                  name="question4"
-                  value="Yes"
-                  required
-                />
-
-                <label for="q4_no">No, I do not currently qualify</label>
-                <input
-                  type="radio"
-                  id="q4_no"
-                  name="question4"
-                  value="No"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question4', 'question5')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-
-          <!-- Question 5 -->
-          <!-- <div class="box" id="question5" style="display: none">
-            <div class="question">
-              <label>What is your credit score?</label>
-              <div class="options">
-                <label for="q5_below_640">Below 640</label>
-                <input
-                  type="radio"
-                  id="q5_below_640"
-                  name="question5"
-                  value="Below 640"
-                  required
-                />
-
-                <label for="q5_640_to_679">640-679</label>
-                <input
-                  type="radio"
-                  id="q5_640_to_679"
-                  name="question5"
-                  value="640-679"
-                  required
-                />
-
-                <label for="q5_680_to_719">680-719</label>
-                <input
-                  type="radio"
-                  id="q5_680_to_719"
-                  name="question5"
-                  value="680-719"
-                  required
-                />
-
-                <label for="q5_720_plus">720+</label>
-                <input
-                  type="radio"
-                  id="q5_720_plus"
-                  name="question5"
-                  value="720+"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question5', 'question6')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-
-          <!-- Question 6 -->
-          <!-- <div class="box" id="question6" style="display: none">
-            <div class="question">
-              <label
-                >What is your total annual household income as a percentage of
-                AMI?</label
-              >
-              <div class="options">
-                <label for="q6_at_or_below_80">At or below 80% AMI</label>
-                <input
-                  type="radio"
-                  id="q6_at_or_below_80"
-                  name="question6"
-                  value="At or below 80% AMI"
-                  required
-                />
-
-                <label for="q6_81_to_100">81-100% AMI</label>
-                <input
-                  type="radio"
-                  id="q6_81_to_100"
-                  name="question6"
-                  value="81-100% AMI"
-                  required
-                />
-
-                <label for="q6_101_to_120">101-120% AMI</label>
-                <input
-                  type="radio"
-                  id="q6_101_to_120"
-                  name="question6"
-                  value="101-120% AMI"
-                  required
-                />
-
-                <label for="q6_over_120">Over 120% AMI</label>
-                <input
-                  type="radio"
-                  id="q6_over_120"
-                  name="question6"
-                  value="Over 120% AMI"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question6', 'question7')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-
-          <!-- Question 7 -->
-          <!-- <div class="box" id="question7" style="display: none">
-            <div class="question">
-              <label
-                >Is this your first time purchasing a home, or have you owned a
-                home in the last 3 years?</label
-              >
-              <div class="options">
-                <label for="q7_first_time">I am a first time home buyer</label>
-                <input
-                  type="radio"
-                  id="q7_first_time"
-                  name="question7"
-                  value="First time home buyer"
-                  required
-                />
-
-                <label for="q7_not_owned_last_3"
-                  >I have not owned in the last 3 years</label
-                >
-                <input
-                  type="radio"
-                  id="q7_not_owned_last_3"
-                  name="question7"
-                  value="Not owned in last 3 years"
-                  required
-                />
-
-                <label for="q7_owned_last_3"
-                  >I have owned in the last 3 years</label
-                >
-                <input
-                  type="radio"
-                  id="q7_owned_last_3"
-                  name="question7"
-                  value="Owned in last 3 years"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question7', 'question8')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-
-          <!-- Question 8 -->
-          <!-- <div class="box" id="question8" style="display: none">
-            <div class="question">
-              <label
-                >What is the approximate amount of your liquid assets?</label
-              >
-              <div class="options">
-                <label for="q8_0_10k">$0 - $10,000</label>
-                <input
-                  type="radio"
-                  id="q8_0_10k"
-                  name="question8"
-                  value="$0 - $10,000"
-                  required
-                />
-
-                <label for="q8_10k_25k">$10,001 - $25,000</label>
-                <input
-                  type="radio"
-                  id="q8_10k_25k"
-                  name="question8"
-                  value="$10,001 - $25,000"
-                  required
-                />
-
-                <label for="q8_more_than_25k">More than $25,000</label>
-                <input
-                  type="radio"
-                  id="q8_more_than_25k"
-                  name="question8"
-                  value="More than $25,000"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question8', 'question9')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-
-          <!-- Question 9 -->
-          <!-- <div class="box" id="question9" style="display: none">
-            <div class="question">
-              <label
-                >Are you employed as a public protector, educator, or health
-                care provider?</label
-              >
-              <div class="options">
-                <label for="q9_yes">Yes</label>
-                <input
-                  type="radio"
-                  id="q9_yes"
-                  name="question9"
-                  value="Yes"
-                  required
-                />
-
-                <label for="q9_no">No</label>
-                <input
-                  type="radio"
-                  id="q9_no"
-                  name="question9"
-                  value="No"
-                  required
-                />
-              </div>
-              <button
-                class="next-button"
-                onclick="nextQuestion('question9', 'question10')"
-              >
-                Next
-              </button>
-            </div>
-          </div> -->
-
-          <!-- Question 10 -->
-          <!-- <div class="box" id="question10" style="display: none">
-            <div class="question">
-              <label
-                >Are you living with a disability or a member that will be
-                living in the house with a disability?</label
-              >
-              <div class="options">
-                <label for="q10_yes">Yes</label>
-                <input
-                  type="radio"
-                  id="q10_yes"
-                  name="question10"
-                  value="Yes"
-                  required
-                />
-
-                <label for="q10_no">No</label>
-                <input
-                  type="radio"
-                  id="q10_no"
-                  name="question10"
-                  value="No"
-                  required
-                />
-              </div>
-              <button class="submit-button" onclick="submitQuiz()">
-                Submit
-              </button>
-            </div>
-          </div>-->
-        </div>
-      </div>
-    </section>
+          
     <script src="{% static 'home.js' %}"></script>
 
     <!-- My Services Section Start -->
