--- a/DownPayment/DPA_app/templates/check_eligibility.html
+++ b/DownPayment/DPA_app/templates/check_eligibility.html
@@ -59,9 +59,7 @@ button:hover {
   <body>
     <!-- home -->
     <div class="scroll-button">
-        <a href="/">
-            <img style="width:50px;" src="{% static 'images/logo-png_1.png' %}" alt="Logo" />
-        </a>
+      <div class="logo"><a href="#"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 70px;"></a></div>
     </div>
     
     
