--- a/DownPayment/DPA_app/templates/eligibility_results.html
+++ b/DownPayment/DPA_app/templates/eligibility_results.html
@@ -115,6 +115,7 @@ nav.sticky .menu-btn {
 <body>
   <nav>
     <div class="navbar">
+      <div class="logo"><a href="#"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 70px;"></a></div>
       <div class="logo"><a href="#">The Get Down.</a></div>
       <ul class="menu">
         <li><a href="#home">Home</a></li>
