--- a/DownPayment/DPA_app/templates/home.html
+++ b/DownPayment/DPA_app/templates/home.html
@@ -350,9 +350,12 @@ section .button button:hover {
   margin: 0 6px;
 }
 .skills-details .boxes {
-  width: 45%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  height: 800px;
+  margin: auto;
 }
 .skills-details .box {
   /* width: calc(100% / 2 - 20px);
@@ -700,7 +703,7 @@ footer .text span a:hover {
     <!-- navgaition menu -->
     <nav>
       <div class="navbar">
-        <div class="logo"><a href="#"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 50px;"></a></div>
+        <div class="logo"><a href="#"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 70px;"></a></div>
         <div class="logo"><a href="#">The Get Down.</a></div>
         
         <ul class="menu">
@@ -891,8 +894,7 @@ footer .text span a:hover {
     <footer>
       <div class="text">
         <span
-          >Created By <a href="#">CodingLab</a> | &#169; 2021 All Rights
-          Reserved</span
+          >Created By <a href="#">The Get Down</a> | &#169; GDI 2023</span
         >
       </div>
     </footer>
