--- a/DownPayment/DPA_app/templates/check_eligibility.html
+++ b/DownPayment/DPA_app/templates/check_eligibility.html
@@ -11,7 +11,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="{% static 'logo-png_1.png' %}" type="image/png" />
    <style>
 .el-form {
     background-color: white;      
@@ -58,10 +57,7 @@ button:hover {
   </head>
   <body>
     <!-- home -->
-    <div class="scroll-button">
-      <div class="logo"><a href="#"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 70px;"></a></div>
-    </div>
-    
+    <div class="logo"><a href="{% url 'home' %}"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 70px;"></a></div>
     
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
 <script src="{% static 'js/script.js' %}"></script>
