--- a/DownPayment/DPA_app/templates/eligibility_results.html
+++ b/DownPayment/DPA_app/templates/eligibility_results.html
@@ -1,3 +1,4 @@
+{%  load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -115,7 +116,7 @@ nav.sticky .menu-btn {
 <body>
   <nav>
     <div class="navbar">
-      <div class="logo"><a href="#"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 70px;"></a></div>
+      <div class="logo"><a href="{% url 'home' %}"><img src="{% static 'images/logo-png_1.png' %}" alt="Logo" style="height: 70px;"></a></div>
       <div class="logo"><a href="#">The Get Down.</a></div>
       <ul class="menu">
         <li><a href="#home">Home</a></li>
