--- a/DownPayment/DPA_app/templates/home.html
+++ b/DownPayment/DPA_app/templates/home.html
@@ -1,6 +1,5 @@
 {%  load static %}
 
-
 <!DOCTYPE html>
 <!-- Website - www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
@@ -14,7 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="{% static 'logo-png_1.png' %}" type="image/png" />
+    <link rel="icon" href="{% static '/images/logo-png_1.png' %}" type="image/png" />
     <style>
       /* Google Font CDN Link */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
